# derive_enum_accessors

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs
tests/: simple.rs
