[package]
name = "derive_enum_accessors"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
repository = "https://github.com/GodOfProgramming/derive_enum_accessors"
authors = ["GodOfProgramming"]
description = "A macro for deriving immutable and mutable accessors for enum structs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
